fixed blue bg issue on IE

--- a/css/AdminLTE.css
+++ b/css/AdminLTE.css
@@ -4919,7 +4919,7 @@ table.text-center th {
 }
 
 .content-wrapper{
-  background-color: #013A6B;
+  background-color: #f9f9f9;
   background: -webkit-linear-gradient(120deg, #f9f9f9 50%, #f2f2f2 50%);
   /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(120deg, #f9f9f9 50%, #f2f2f2 50%);
